@@ -3,9 +3,9 @@ sentinels <- function(p,pid,st,debug=FALSE,flanking=1e+6,chr="Chrom",pos="End",b
   nr <- nrow(p)
   u <- p[st:nr,]
   z <- within(u,{
-    d <- c(0,diff(u[[pos]]))
+    d <- c(0,diff(pos))
     s <- cumsum(d)
-    log10p <- -log10p(u[[b]]/u[[se]])
+    log10p <- -log10p(b/se)
   })
   if (debug) print(z[c(chr,pos,"d","s",snp,"log10p")])
   if (tail(z[,"s"], 1) <= flanking) {
