@@ -1,6 +1,7 @@
 Version history of the R genetic analysis package (R/gap)
 
 Version 1.2.2
+01-07-2019	Revise sentinels() to avoid within(u,u[[]]), etc.
 25-06-2019	Add cs and suggest matrixStats
 18-06-2019	Add logp and variance explained for sentinels.Rd
 12-06-2019	Add z = option to mhtplot.trunc to handle P value = 0
